# RemakeEngine

./: .coverage  .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .luarc.json  .ps1  .pylintrc  .sonarcloud.properties  1sonar-project.properties  AGENTS.md  BuildingPage_Implementation.md  CLA.md  CONTRIBUTING.md  Directory.Build.props  PAL.code-workspace  Plans.md  Readme copy.md  Readme.md  RemakeEngine.sln  RemakeEngine.sln.DotSettings  RemakeEngine.slnx  Spec.md  StorePage_Implementation.md  Style.md  TODO.md  _operations_engine.py  api_definitions.lua  blank.blend  config.schema.json  coverage.xml  cs_analyzer.py  dotnet.publish.ps1  download.py  jsconfig.json  main.ps1  main.py  main.spec  main.yml  (+28 more)
.betterGit/: meta.toml  project.toml
.github/workflows/: .NET Build, Test & Release.yml  Desktop .NET Build & Test.yml  SonarQube.yml  SonarQubeBuild.yml  Win,Linux,Mac .NET Test, Build, Release copy.yml  Win,Linux,Mac .NET Test, Build, Release.yml  Win64 .NET Build & Test.yml  build.yml  ci.yml  dotnet-desktop.yml  global-release.yml  main.yml  on commit -- Win64 Build.yml  pylint.yml  python-app.yml  test.yml  (+5 more)
Engine/: cli.py  gui copy 2.py  gui.py  main_cli.py  main_gui.py  old-main.py  operations_engine.py
Engine1/: cli.py  gui.py
EngineApps/: Tools.json  jsconfig.json  readme  register.json
EngineNet/: .gitignore  EngineConfig.cs  EngineNet.csproj  GlobalUsing.cs  Program.cs  Program.cs.spec.md  readme.md
EngineNet.Interface.GUI.Avalonia/: App.axaml  App.axaml.cs  AvaloniaGui.cs  EngineNet.Interface.GUI.Avalonia.csproj  PromptHelpers.cs
EngineNet.Tests/: AvaloniaTestApp.cs  CliAppBasicTests.cs  CliAppPrivateTests.cs  CommandBuilderTests.cs  EngineConfigTest.cs  EngineConfigTests.cs  EngineNet.Tests.csproj  FileValidatorTests.cs  GlobalUsing.cs  InlineOperationOptionsTests.cs  MainViewModelTests.cs  OperationsEngineTests.cs  PlaceholdersTests.cs  ProcessRunnerTests.cs  RegistriesTests.cs  RemakeEngine.Core.ProcessRunner.cs  TerminalUtilsTests.cs  ToolsJsonSchemaTests.cs  ToolsTests.cs
EngineNetTest/: EngineNetTest.csproj  ProgramTests.cs
LegacyEnginePy/: gui.py
OldRemakeRegistry/: asset_index.py  models_reg.py  textures_reg.py
RemakeRegistry/: Tools.json  register.json
Scripts/: diff.py  hashname.py  length.ps1  names.ps1
Utils/: Engine_sdk.py  printer.py
api_definitions/: api_definitions.pyi
json.schema/: operations.schema.json
schemas/: cli-command.schema.md  game.schema.json  operations.schema.json  operations.toml.md  tools.schema.json  tools.toml.md
tests/: conf_test.py  conftest.py  test.py  test_cli.py  test_command_builder.py  test_config.py  test_gui.py  test_main.py  test_placeholders.py  test_printer.py  test_resolver.py  test_utils.py
(+1035 files in other folders)
