[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remakeengine"
version = "1.7.1"
description = ""
authors = [
  { name = "samarixum (YGGDRASIL)" }
]
license = { text = "Custom Non-Commercial" }
requires-python = ">=3.13"

dependencies = [
	"ImageHash==4.3.2",
	"matplotlib==3.10.3",
	"numpy==2.2.6",
	"Pillow==11.3.0",
	"PyQt5==5.15.11",
	"PyQt5-sip==12.17.0",
	"questionary==2.1.0",
	"tqdm==4.67.1",
	"customtkinter==5.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["remakeengine"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = [
	"I",        # import sorting
	"UP",       # pyupgrade
	"ANN",      # typing (require annotations)
	"T20",      # print (we'll allow, see per-file ignores)
	"N",        # pep8-naming
]
# You intentionally shadow builtins; allow that.
extend-ignore = [
	"A001", "A002", "A003",  # flake8-builtins equivalents
]

[tool.ruff.lint.per-file-ignores]
"Utils/printer.py" = ["T201"]   # printer defines print; allow it
"Engine/**"        = ["T201"]   # allow using print() (your custom one)

[tool.ruff.format]
quote-style = "preserve"


[tool.pylint.master]
ignore = ["venv", ".venv", "build", "dist", ".tox", "runtime", "blender-4.0.2-windows-x64", "dev", "reverse_engineering_stuff", ".history", "RemakeRegistry"]

